test/corpus/data.txt
=============================
Dataset with empty data
=============================

netcdf basic {
    data:
}

---

(dataset
  (dataset_id)
  (data_section))

=============================
Dataset with scalar int value
=============================

netcdf basic {
    data:
        a = 1 ;
}

---

(dataset
  (dataset_id)
  (data_section
    (data_declaration
      variable: (identifier)
      (data_list
        (value
          (integer))))))

=============================
Dataset with scalar float value
=============================

netcdf basic {
    data:
        a = 1.0 ;
}

---

(dataset
  (dataset_id)
  (data_section
    (data_declaration
      variable: (identifier)
      (data_list
        (value
          (float))))))

=============================
Dataset with scalar char value
=============================

netcdf basic {
    data:
        a = 'a' ;
}

---

(dataset
  (dataset_id)
  (data_section
    (data_declaration
      variable: (identifier)
      (data_list
        (value
          (char))))))

=============================
Dataset with scalar string value
=============================

netcdf basic {
    data:
        a = "Hello there!" ;
}

---

(dataset
  (dataset_id)
  (data_section
    (data_declaration
      variable: (identifier)
      (data_list
        (value
          (string))))))

=============================
Dataset with scalar fill value
=============================

netcdf basic {
    data:
        a = _ ;
}

---

(dataset
  (dataset_id)
  (data_section
    (data_declaration
      variable: (identifier)
      (data_list
        (fill_value)))))

=============================
Dataset with multiple values
=============================

netcdf basic {
    data:
        a = 1 , 2, 3, 4, 5;
}

---

(dataset
  (dataset_id)
  (data_section
    (data_declaration
      variable: (identifier)
      (data_list
        (value
          (integer))
        (value
          (integer))
        (value
          (integer))
        (value
          (integer))
        (value
          (integer))))))

=============================
Dataset Invalid missing comma
:error
=============================

netcdf basic {
    data:
        a = 1, 2, 3 4, 5;
}

---



=============================
Dataset with datalist
=============================

netcdf basic {
    data:
        my_vlen = {1, 2, 3};
}

---

(dataset
  (dataset_id)
  (data_section
    (data_declaration
      (identifier)
      (data_list
        (data_list
          (value
            (integer))
          (value
            (integer))
          (value
            (integer)))))))

=============================
Dataset with nested datalist
=============================

netcdf basic {
    data:
        my_compound = {1, {2.1, 2.2}, 3};
}

---

(dataset
  (dataset_id)
  (data_section
    (data_declaration
      (identifier)
      (data_list
        (data_list
          (value
            (integer))
          (data_list
            (value
              (float))
            (value
              (float)))
          (value
            (integer)))))))
