test/corpus/dimensions.txt
==============================
Dataset with empty dimensions
==============================

netcdf basic {
    dimensions:
}

---

(dataset
  (dataset_id)
  (dimensions_section))

============================================
Dataset with invalid dimensions declaration
:error
============================================

netcdf basic {
    dimensions :
}

---

============================================
Dataset with invalid dimensions declaration
:error
============================================

netcdf basic {
    dimensions ;
}

---

============================================
Dataset with invalid dimensions declaration
:error
============================================

netcdf basic {
    dimensions: ;
}

---

============================================
Dataset with invalid dimensions declaration
:error
============================================

netcdf basic {
    dimensions
}

---

==============================
Dataset with single dimension
==============================

netcdf basic {
    dimensions:
        a = 1 ;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension_declarations
      (dimension
        name: (identifier)
        size: (dimension_size
          (const_positive_int))))))

========================================
Dataset with single unlimited dimension
========================================

netcdf basic {
    dimensions:
        time = unlimited ;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension_declarations
      (dimension
        name: (identifier)
        size: (dimension_size
          (nc_unlimited))))))

========================================
Dataset with single UNLIMITED dimension
========================================

netcdf basic {
    dimensions:
        time = UNLIMITED ;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension_declarations
      (dimension
        name: (identifier)
        size: (dimension_size
          (nc_unlimited))))))

=================================================================
Dataset with single dimension and invalid dimensions declaration
:error
=================================================================

netcdf basic {
    dimensions :
        a = 1;
}

---

=================================================================
Dataset with single dimension and invalid dimensions declaration
:error
=================================================================

netcdf basic {
    dimensions;
        a = 1;
}

---

=================================
Dataset with multiple dimensions
=================================

netcdf basic {
    dimensions:
        a = 1 ;
        b = 2 ;
        c = unlimited ;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension_declarations
      (dimension
        name: (identifier)
        size: (dimension_size
          (const_positive_int))))
    (dimension_declarations
      (dimension
        name: (identifier)
        size: (dimension_size
          (const_positive_int))))
    (dimension_declarations
      (dimension
        name: (identifier)
        size: (dimension_size
          (nc_unlimited))))))

=========================================
Dataset with multiple dimensions as list
=========================================

netcdf basic {
    dimensions:
        a = 1, b = 2, c = unlimited ;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension_declarations
      (dimension
        name: (identifier)
        size: (dimension_size
          (const_positive_int)))
      (dimension
        name: (identifier)
        size: (dimension_size
          (const_positive_int)))
      (dimension
        name: (identifier)
        size: (dimension_size
          (nc_unlimited))))))

===================================================
Dataset with invalid dimensions list missing comma
:error
===================================================

netcdf basic {
    dimensions:
        a = 1, b = 2 c = unlimited ;
}

---

=====================================================
Dataset with multiple dimensions list and individual
=====================================================

netcdf basic {
    dimensions:
        a = 1, b = 2 ;
        c = unlimited ;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension_declarations
      (dimension
        name: (identifier)
        size: (dimension_size
          (const_positive_int)))
      (dimension
        name: (identifier)
        size: (dimension_size
          (const_positive_int))))
    (dimension_declarations
      (dimension
        name: (identifier)
        size: (dimension_size
          (nc_unlimited))))))

========================================
Dataset with invalid negative dimension
:error
========================================

netcdf basic {
    dimensions:
        a = -1 ;
}

---

======================================
Dataset with missing dimension number
:error
======================================

netcdf basic {
    dimensions:
        a = ;
}

---

=====================================
Dataset with invalid float dimension
:error
=====================================

netcdf basic {
    dimensions:
        a = 1.0 ;
}

---

====================================
Dataset with invalid char dimension
:error
====================================

netcdf basic {
    dimensions:
        a = two ;
}

---

=================================
Dataset with invalid * dimension
:error
=================================

netcdf basic {
    dimensions:
        a = * ;
}

---

====================================
Dataset with invalid dimension name
:error
====================================

netcdf basic {
    dimensions:
        .no = * ;
}

---
