test/corpus/general_syntax.txt
============================
Dataset ID Valid characters
============================

netcdf abcxyz_ABCXYZ_.+-@ {
}

---

(dataset
  (dataset_id))

=================================
Dataset ID Valid containing UTF8
=================================

netcdf utf8_äöü {
}

---

(dataset
  (dataset_id))

=====================================
Dataset ID Valid starting upper-case
=====================================

netcdf A_ok {
}

---

(dataset
  (dataset_id))

=====================================
Dataset ID Valid starting underscore
=====================================

netcdf _Ok {
}

---

(dataset
  (dataset_id))

============================
Dataset ID Valid with space
============================

netcdf Spaces are OK {
}

---

(dataset
  (dataset_id))

====================================
Dataset ID Valid starting with UTF8
====================================

netcdf äöü-utf8 {
}

---

(dataset
  (dataset_id))

==========================================
Dataset ID Valid with non-regular = start
==========================================

netcdf =OK {
}

---

(dataset
  (dataset_id))

==========================================
Dataset ID Valid with non-regular [ start
==========================================

netcdf [_Also_OK {
}

---

(dataset
  (dataset_id))

==============================
Dataset ID Invalid contains {
:error
==============================

netcdf ID_with_{_Not_OK {
}

---

====================
Single-line comment
====================

netcdf dataset_name {
// This is a single-line comment
}

---

(dataset
  (dataset_id)
  (comment))

===============
Inline comment
===============

netcdf dataset_name {  // This is an inline comment
}

---

(dataset
  (dataset_id)
  (comment))

============================
Identifier Valid characters
============================

netcdf dataset {
dimensions:
    abcxyz_ABCXYZ_.+-@ = 4 ;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension
      (identifier))))

===========================
Identifier Valid with UTF8
===========================

netcdf dataset {
dimensions:
    utf8_äöü = 4 ;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension
      (identifier))))

==============================================
Identifier Valid starting with escaped number
==============================================

netcdf dataset {
dimensions:
    \9a = 4 ;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension
      (identifier))))

==================================================
Identifier Invalid starting with unescaped number
:error
==================================================

netcdf dataset {
dimensions:
    99 = 4 ;
}

---

=====================================
Identifier Valid starting upper-case
=====================================

netcdf dataset {
dimensions:
    A_ok = 4 ;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension
      (identifier))))

=====================================
Identifier Valid starting underscore
=====================================

netcdf dataset {
dimensions:
    _Ok = 4 ;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension
      (identifier))))

====================================
Identifier Invalid containing space
:error
====================================

netcdf dataset {
dimensions:
    Spaces are\ Not OK = 4 ;
}

---

================================
Identifier Invalid containing /
:error
================================

netcdf dataset {
dimensions:
    Reserve_/_for_Filenames = 4 ;
}

---

====================================
Identifier Valid starting with UTF8
====================================

netcdf dataset {
dimensions:
    äaa = 4 ;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension
      (identifier))))

================================
Identifier Invalid containing =
:error
================================

netcdf dataset {
dimensions:
    Not=OK = 4 ;
}

---

==================================================
Identifier Invalid containing unescaped special [
:error
==================================================

netcdf dataset {
dimensions:
    Contains_[_OK = 4 ;
}

---


==============================================
Identifier Valid containing escaped special [
==============================================

netcdf dataset {
dimensions:
    Contains_\[_OK = 4 ;
}

---

(dataset
  (dataset_id)
  (dimensions_section
    (dimension
      (identifier))))

====================================
Identifier starting with escaped special [
:error
====================================

netcdf dataset {
dimensions:
    \[_Not_OK = 4 ;
}

---
